--- a/packages/src/styles/theme/themes.css
+++ b/packages/src/styles/theme/themes.css
@@ -3,6 +3,7 @@
   --color-accent: var(--color-yellow-300);
   --color-brand-primary: var(--color-teal-800);
   --color-brand-secondary: var(--color-teal-400);
+  --color-caption: var(--color-neutral-950);
   --color-error: var(--color-orange-500);
   --color-error-dark: var(--color-orange-700);
   --color-foreground: var(--color-neutral-950);
@@ -17,6 +18,7 @@
     --color-accent: var(--color-yellow-300);
     --color-brand-primary: var(--color-blue-900);
     --color-brand-secondary: var(--color-teal-700);
+    --color-caption: var(--color-yellow-300);
     --color-error: var(--color-orange-400);
     --color-error-dark: var(--color-orange-600);
     --color-foreground: var(--color-neutral-100);
