--- a/packages/src/styles/utilities/utilities.css
+++ b/packages/src/styles/utilities/utilities.css
@@ -1,4 +1,5 @@
 @layer base {
+  /* Buttons Animations */
   .default-button-animation {
     @apply transition-all duration-300 hover:scale-105 hover:shadow-2xl;
   }
@@ -9,5 +10,10 @@
 
   .link-button-animation {
     @apply text-foreground-muted hover:!text-accent transition-colors duration-300;
+  }
+
+  /* Card Animation */
+  .card-animation {
+    @apply bg-surface-base shadow-xl transition-all duration-500 hover:scale-105 hover:transform hover:shadow-2xl;
   }
 }
