feat: improve dark tokens so the dark theme can be more elegant

--- a/src/styles/theme/themes.css
+++ b/src/styles/theme/themes.css
@@ -20,20 +20,16 @@
 @layer base {
   /* -------- SEMANTIC COLOR TOKENS (DARK THEME) -------- */
   .dark {
-    --color-accent: var(--color-yellow-300);
-    --color-brand-primary: color-mix(in srgb, var(--color-blue-900), white 30%);
-    --color-brand-secondary: var(--color-teal-700);
-    --color-caption: var(--color-yellow-300);
+    --color-accent: var(--color-yellow-500);
+    --color-brand-primary: var(--color-blue-700);
+    --color-brand-secondary: var(--color-teal-900);
+    --color-caption: var(--color-neutral-200);
     --color-error: var(--color-orange-400);
-    --color-error-dark: var(--color-orange-600);
-    --color-foreground: var(--color-neutral-100);
-    --color-foreground-muted: var(--color-neutral-400);
-    --color-surface: var(--color-neutral-950);
-    --color-surface-base: var(--color-neutral-900);
-    --color-surface-elevation: color-mix(
-      in srgb,
-      var(--color-blue-900),
-      black 90%
-    );
+    --color-error-dark: var(--color-orange-800);
+    --color-foreground: var(--color-neutral-75);
+    --color-foreground-muted: var(--color-neutral-300);
+    --color-surface: var(--color-neutral-975);
+    --color-surface-base: var(--color-neutral-960);
+    --color-surface-elevation: var(--color-neutral-940);
   }
 }
